// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select stories > renders default select 1`] = `
<div
  class="ui-select"
>
  <select
    class="ui-select__field"
  />
</div>
`;

exports[`Select stories > renders error select 1`] = `
<div
  class="ui-select ui-select--error"
>
  <select
    class="ui-select__field"
  />
  <div
    class="ui-select__error"
  >
    Выберите значение
  </div>
</div>
`;
